<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.example.legato.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.example.legato.PVNView
        android:id="@+id/theFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context = ".MainActivity"
        />

    <LinearLayout
        android:id="@+id/linearLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

<!--        <TextView-->
<!--            android:id="@+id/tvHerz"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/textMute"-->
<!--            android:textColor="@color/purple_200"-->
<!--            android:textSize="12sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvTimes"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="0times"-->
<!--            android:textColor="@color/purple_200"-->
<!--            android:textSize="12sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvTotalTime"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="0second"-->
<!--            android:textColor="@color/purple_200"-->
<!--            android:textSize="12sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvFrames"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="0frame"-->
<!--            android:textColor="@color/purple_200"-->
<!--            android:textSize="12sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvDB"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="0db"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="12sp" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTwo"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutOne"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/btnStartStop"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/buttonTextStart"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/btnClear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/buttonTextClear"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/btnUndo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/UndoAll"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutThree"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTwo"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>
        <ToggleButton
            android:id="@+id/btnNote"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOff="@string/line"
            android:textOn="@string/note"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>

        <ToggleButton
            android:id="@+id/btnGrid"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOff="@string/gridoff"
            android:textOn="@string/gridon"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>

        <ToggleButton
            android:id="@+id/btnSYN"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOff="@string/Original"
            android:textOn="@string/Synthesis"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </Space>
    </LinearLayout>

<!--    <fragment-->
<!--        android:id="@+id/CanvasFragment"-->
<!--        android:name="com.example.legato.CanvasFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/linearLayoutTwo"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>